[package]
name = "solindex-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
instruction_params_casting = []

[lib]
proc-macro = true

[dependencies]
solana-program = "1.8"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"