[package]
name = "solindex-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
instruction_params_casting = ["solindex-macros/instruction_params_casting", "bytemuck"]

[dependencies]
borsh = "0.9"
solana-program = "1.8"
pyth-client = "0.2.2"
solindex-macros = { path = "../macros" }
bytemuck = { version = "1.7.2", optional=true }